--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ButOSX/Thirdparty/imgui"]
 	path = ButOSX/Thirdparty/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "ButOSX/Thirdparty/xorstr"]
+	path = ButOSX/Thirdparty/xorstr
+	url = https://github.com/qis/xorstr
