--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
-github: [Lyceion]
+github: [Lyceion, xMuraty]
 patreon: candestan
 custom: ['https://paypal.me/Lyceion']
